objects/DMAPP__DM_Quicklinks_Usage__c.object
<CustomObject>
    <description>NO CONFIGURATION SUPPORT

This object stores information about Quicklinks user activity on the various dealmaker screens. It is intended for use by customers who wish to report on the uptake of Dealmaker by their users.</description>
    <fields>
        <fullName>DMAPP__DVLS_Quicklink__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>DVLS_Quicklink</label>
        <referenceTo>DMAPP__DM_DVLS_Component_Quicklink__c</referenceTo>
        <relationshipLabel>Dealmaker Quicklinks Usage</relationshipLabel>
        <relationshipName>Dealmaker_Quicklinks_Usage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__HitCount__c</fullName>
        <label>HitCount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Quickink_URL__c</fullName>
        <formula>IF ( ISBLANK(DMAPP__Quicklink__c)
     , DMAPP__DVLS_Quicklink__r.DMAPP__Link__c
     , DMAPP__Quicklink__r.DMAPP__Link__c
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quickink URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Quicklink_Name__c</fullName>
        <formula>IF ( ISBLANK(DMAPP__Quicklink__c)
     , DMAPP__DVLS_Quicklink__r.Name
     , DMAPP__Quicklink__r.Name
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quicklink Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Quicklink_Source__c</fullName>
        <formula>IF ( ISBLANK(DMAPP__Quicklink__c)
     , &apos;eLearning&apos;
     , &apos;Dealmaker&apos;
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quicklink Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Quicklink_Type__c</fullName>
        <formula>IF ( ISBLANK(DMAPP__Quicklink__c)
     , TEXT(DMAPP__DVLS_Quicklink__r.DMAPP__Type__c)
     , TEXT(DMAPP__Quicklink__r.DMAPP__Type__c)
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quicklink Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Quicklink__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Quicklink</label>
        <referenceTo>DMAPP__DM_Quicklink__c</referenceTo>
        <relationshipLabel>Dealmaker Quicklinks Usage</relationshipLabel>
        <relationshipName>Dealmaker_Quicklinks_Usage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Usage_Date__c</fullName>
        <label>Usage Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Dealmaker Quicklinks Usage</label>
    <nameField>
        <label>Dealmaker Quicklinks Usage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealmaker Quicklinks Usage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>